# team-aws

./: .gitignore  Dockerfile  analyze_stages.py  check_data.py  check_routes.py  count_questions.py  main.py  pyproject.toml  redistribute.py  repomix-output.xml  requirements.txt  vb_height})')
app/data/: __init__.py  bookmark_repository.py  bunkazai_questions.py  course_repository.py  database.py  dynamodb.py  dynamodb_repositories.py  extra_questions.py  glossary_seed.py  models.py  nanyo_questions_new.py  question_repository.py  repository_factory.py  secrets.py  seed_data.py  seed_data_extra.py  seed_data_extra2.py  session_repository.py  user_record_repository.py  (+1 more)
deploy/: MANUAL_DEPLOY.md  deploy.sh  template.yaml
migrations/: 002_add_user_password_hash.py  003_add_extra_questions.py  004_create_bookmarks_table.py  005_shuffle_answer_positions.py  006_add_user_api_key.py  __init__.py  runner.py
scripts/: check_regions.py  create_lambda_zip.ps1  detect_trivia_mismatches.py  fix_extra_questions.py  fix_seed_data.py  identify_mismatches.py  reassign_stages.py  seed_dynamodb.py
team-aws-main/: README.md  check_data.py  count_questions.py
tests/: test_course_sort.py  test_glossary_properties.py  test_glossary_seed_upsert.py  test_region_summary_api.py  test_scroll_decision_properties.py  test_seed_data_properties.py  test_seed_data_smoke.py  test_selection_opacity_properties.py  test_streak_calculation.py  test_svg_map_properties.py  test_title_master_properties.py  test_tooltip_position_properties.py  test_xp_calculator_properties.py  test_xp_level_consistency_properties.py
(+160 files in other folders)
