[project]
name = "ehime-ai-quiz"
version = "0.1.0"
description = "愛媛探索AIクイズ - 愛媛県の大学生・高専生向けAI学習プラットフォーム"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.32",
    "python-dotenv>=1.0.0",
    "boto3>=1.43.0",
    "google-genai>=1.0.0",
    "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.98.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
